# dayz-admin

./: .gitignore  CLAUDE.md  README.md  items_loader.py  loader.py  main.py  pyproject.toml  types_loader.py  validator.py
.github/: copilot-instructions.md
app/: app-config.json  app.py  mainConfig.bak.py  mainConfig.py
app/config/: config.py
app/config/src/: app-config.latest.json  mainConfig.ui
app/src/: mainConfig.ui
dayz_admin_tools/: __main__.py  cli.py  config.py  defaults.py  log.py
dayz_admin_tools/utilities/: text.py
dayz_admin_tools/utilities/economy/: Type.py  Types.py
dayz_admin_tools/utilities/economy/schemas/: types.xsd
dayz_admin_tools/utilities/files/: fManager.py  json.py  xml.py
dayz_admin_tools/utilities/traders/expansion/: Item.py  Items.py
dayz_admin_tools/utilities/traders/traderplus/: Items.py  (+1 more)
docs/: 2026-03-26-simplify-review.md
docs/plans/: 2026-03-04-codebase-improvement-design.md  2026-03-04-codebase-improvement-plan.md
src/: main.py  qt.py  validatorUI.py
src/config/: config.py
src/config/src/: app-config.v1.0.json  mainConfig.ui  mainUI.ui
src/forms/: mainConfig.py  mainUI.bak.py  mainUI.py
standalone/: airdrop_loader.py  airdropsettings.py  bulkconvert_traderplus_vehicles.sh  compare_type_file.py  items_loader.py  traderplus_to_expansion.py  traderplusparts_to_vehicle_expansion.py  types_loader.py  types_to_market.py  validator.py
tests/: conftest.py  test_cli.py  test_file_manager.py  test_json.py  test_text.py  test_validators.py
tests/fixtures/: invalid.json  invalid.xml  valid.json  valid.xml
(+1 files in other folders)
