[tool.poetry]
name = "dayz-admin-tools"
version = "0.1.0"
description = ""
authors = ["idarthjedi <jediah@logiodice.com>"]
readme = "README.md"
packages = [{include = "dayz_admin_tools"}]

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
colorama = "^0.4.6"
lxml = "^4.9.2"
pyqt6 = "^6.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
