[project]
name = "dayz-admin-tools"
version = "0.1.0"
description = "A collection of utilities for DayZ server administration"
authors = [{name = "idarthjedi", email = "jediah@logiodice.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "colorama>=0.4.6",
    "lxml>=5.3.0",
    "pyqt6>=6.4.2",
    "jsonschema>=4.17.3",
    "jsonpath-ng>=1.5.3",
]

[dependency-groups]
dev = [
    "black==25.11.0",
    "isort==6.1.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
dayz-admin = "dayz_admin_tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
